--- a/.github/workflows/vercel-deploy.yml
+++ b/.github/workflows/vercel-deploy.yml
@@ -1,34 +1,40 @@
-name: Deploy to vercel
+name: Deploy to Vercel
 
 on:
-    push:
-        branches:
-            - main
-            - feature/*
-    pull_request_target:
+  push:
+    branches:
+      - main
+      - feature/*
+  pull_request_target:
+
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        
-        steps:
-            - name: Checkout code
-              uses: actions/setup-node@v3
-              with:
-                node-version: '16'
+  build:
+    runs-on: ubuntu-latest
 
-            - name: Install dependencies
-              run: npm install
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-            - name: Run Build
-              run: npm build
-              
-            - name: Run test
-              run: npm test
+      - name: List files
+        run: ls -la
 
-            - name: Vercel Deploy process
-              env:
-                VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-              run: |
-                npm install -g vercel
-                vercel --prod --token  $VERCEL_TOKEN  
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
 
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run Build
+        run: npm run build
+
+      - name: Run tests
+        run: npm test
+
+      - name: Vercel Deploy process
+        env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+        run: |
+          npm install -g vercel
+          vercel --prod --token $VERCEL_TOKEN
