--- a/.github/workflows/feature-branch.yml
+++ b/.github/workflows/feature-branch.yml
@@ -1,9 +1,9 @@
-name: Deploy to Vercel (Main)
+name: Deploy to Vercel (Feature)
 
 on:
   push:
     branches:
-      - main
+      - feature/*
 
 jobs:
   build:
@@ -35,4 +35,4 @@ jobs:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
         run: |
           npm install -g vercel
-          vercel --prod --token $VERCEL_TOKEN
+          vercel --token $VERCEL_TOKEN
